module pagination: fixed CSS bug on small screens

--- a/src/modules/pagination/_style.scss
+++ b/src/modules/pagination/_style.scss
@@ -99,4 +99,13 @@
       }
     }
   }
+
+  @include small {
+    > ul > li.current {
+      > a,
+      > span {
+        margin-left: 0;
+      }
+    }
+  }
 }
